--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -326,6 +326,10 @@ h2{
 	    animation: wheel 1.2s linear infinite;
 	  }
 	}
+
+	@include verySmall{
+		display: none;
+	}
 }
 .container{
   padding:2rem;
